<resources>
    <!--APP的名称-->
    <string name="app_name">Syway</string>

    <!--注册页面-->
    <string name="regi_text_phone_number">手机号</string>
    <string name="regi_edt_phone_tips">请输入您的手机号</string>
    <string name="regi_btn_vcode">获取验证码</string>
    <string name="regi_text_vcode">验证码</string>
    <string name="regi_edt_vcode_tips">请输入您的验证码</string>
    <string name="regi_text_password">密码</string>
    <string name="regi_edt_password_tips">请输入您的密码</string>
    <string name="regi_btn_register">注册</string>
    <string name="regi_text_password_logined">已经注册过优游？</string>
    <string name="regi_btn_logined">点此登录</string>
    <string name="regi_toolbar_name">注册</string>

    <!--登录页面-->
    <string name="login_text_phone_number">手机号</string>
    <string name="login_edt_phone_tips">请输入您的手机号</string>
    <string name="login_text_password">密码</string>
    <string name="login_edt_password_tips">请输入您的密码</string>
    <string name="login_btn_login">登录</string>
    <string name="login_toolbar_name">登录</string>
    <string name="login_btn_logined_forget">忘记密码</string>

    <!--找回密码-->
    <string name="forget_toolbar_name">找回密码</string>
    <string name="forget_text_phone_number">手机号</string>
    <string name="forget_edt_phone_tips">请输入您的手机号</string>
    <string name="forget_btn_vcode">获取验证码</string>
    <string name="forget_text_vcode">验证码</string>
    <string name="forget_edt_vcode_tips">请输入您的验证码</string>
    <string name="forget_text_password">密码</string>
    <string name="forget_edt_password_tips">请输入密码</string>
    <string name="forget_text_password_two">确认密码</string>
    <string name="forget_edt_password_two_tips">请再次输入密码</string>
    <string name="forget_btn_conform">确认</string>

    <!--主页导航栏显示的信息-->
    <string name="main_radio_around">周围</string>
    <string name="main_radio_hot">热点</string>
    <string name="main_radio_mine">我的</string>

</resources>
