<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/regi_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme"
        android:fitsSystemWindows="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regi_toolbar_name"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/regi_text_phone_number"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/regi_text_phone_number"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:textSize="17sp"/>

        <EditText
            android:id="@+id/regi_edt_phone"
            android:layout_width="160dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_toRightOf="@id/regi_text_phone_number"
            android:background="@null"
            android:hint="@string/regi_edt_phone_tips"
            android:maxLength="20"
            android:textSize="16sp" />

        <View
            android:layout_width="2px"
            android:layout_height="50dp"
            android:background="@color/driverline" />

        <Button
            android:id="@+id/regi_btn_vcode"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="3dp"
            android:background="@color/white"
            android:text="@string/regi_btn_vcode" />

    </LinearLayout>

    <View
        android:id="@+id/regi_view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/regi_text_phone_number"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/driverline" />


    <LinearLayout
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/regi_text_vcode"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/regi_text_vcode"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:textSize="17sp"/>

        <EditText
            android:id="@+id/regi_edt_vcode"
            android:layout_width="190dp"
            android:layout_height="35dp"
            android:layout_toRightOf="@id/regi_text_phone_number"
            android:background="@null"
            android:hint="@string/regi_edt_vcode_tips"
            android:maxLength="20"
            android:layout_gravity="center_vertical"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:id="@+id/regi_view_line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/regi_text_phone_number"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/driverline" />

    <LinearLayout
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/regi_text_password"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/regi_text_password"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:textSize="17sp"/>

        <EditText
            android:id="@+id/regi_edt_password"
            android:layout_width="190dp"
            android:layout_height="35dp"
            android:layout_toRightOf="@id/regi_text_phone_number"
            android:background="@null"
            android:hint="@string/regi_edt_password_tips"
            android:maxLength="20"
            android:layout_gravity="center_vertical"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:id="@+id/regi_view_line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/regi_text_phone_number"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/driverline" />

    <Button
        android:id="@+id/regi_btn_register"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/regi_btn_select"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/regi_btn_register"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="1">

        <TextView
            android:id="@+id/regi_text_logined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_gravity="center_vertical"
            android:text="@string/regi_text_password_logined"
            android:textColor="@color/trans"
            android:textSize="12sp" />

        <Button
            android:id="@+id/regi_btn_logined"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:background="@null"
            android:hint="@string/regi_btn_logined"
            android:maxLength="20"
            android:textColor="@color/green"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>