<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fl_contain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true" >
    </FrameLayout>

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <RadioButton
            android:id="@+id/mainlayout_radio_around"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/mainlayout_around_selector"
            android:checked="true"
            android:text="@string/main_radio_around"
            style="@style/style_RadioButton"/>
        <RadioButton
            android:id="@+id/mainlayout_radio_hot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/mainlayout_hot_selector"
            android:text="@string/main_radio_hot"
            style="@style/style_RadioButton"/>
        <RadioButton
            android:id="@+id/mainlayout_radio_mine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/mainlayout_mine_selector"
            android:text="@string/main_radio_mine"
            style="@style/style_RadioButton"/>
    </RadioGroup>

</RelativeLayout>
